@@ -1,3 +1,10 @@
+2005-10-14  Kristian Høgsberg  <krh@redhat.com>
+
+	* Makefile.am:
+	* configure.ac:
+	* include/dix-config.h.in:
+	* os/Makefile.am: Hook up lbx.
+
 2005-10-14  Alan Coopersmith  <alan.coopersmith@sun.com>
 
 	* configure.ac:
